folder set up and dependencies.

--- a/package.json
+++ b/package.json
@@ -1,4 +1,13 @@
 {
+  "name": "instock-server",
+  "version": "1.0.0",
+  "description": "InStock API server",
+  "main": "index.js",
+  "type": "module",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js"
+  },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
