--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "instock-server",
   "version": "1.0.0",
   "description": "InStock API server",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "db:migrate": "knex migrate:latest",
     "db:seed": "knex seed:run"
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "knex": "^3.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "knex": "^3.1.0",
     "mysql2": "^3.14.0"
+
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
